fix datetime format

--- a/backend/translation-metrics/helpers/producer/package.json
+++ b/backend/translation-metrics/helpers/producer/package.json
@@ -5,8 +5,7 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "start": "node ./dist/index.js",
-    "dev": "tsc --watch",
+    "dev": "tsc && node ./dist/index.js",
     "tc": "tsc --noEmit --pretty"
   },
   "devDependencies": {
