--- a/backend/translation-metrics/solution/package.json
+++ b/backend/translation-metrics/solution/package.json
@@ -13,7 +13,14 @@
   "license": "ISC",
   "private": true,
   "devDependencies": {
+    "@types/lodash": "^4.14.177",
+    "@types/node": "^16.11.11",
+    "@types/yargs": "^17.0.7",
     "nodemon": "^2.0.15",
     "typescript": "^4.5.2"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21",
+    "yargs": "^17.3.0"
   }
 }
