--- a/tooling/nx/playbook/00-workspace/apps/web/project.json
+++ b/tooling/nx/playbook/00-workspace/apps/web/project.json
@@ -40,7 +40,8 @@
       "executor": "@nrwl/web:dev-server",
       "options": {
         "buildTarget": "web:build",
-        "hmr": true
+        "hmr": true,
+        "proxyConfig": "apps/web/proxy.conf.json"
       },
       "configurations": {
         "production": {
