--- a/tooling/nx/playbook/00-workspace/package.json
+++ b/tooling/nx/playbook/00-workspace/package.json
@@ -10,6 +10,7 @@
   "private": true,
   "dependencies": {
     "core-js": "^3.6.5",
+    "express": "4.17.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-router-dom": "5.3.0",
@@ -20,14 +21,17 @@
     "@nrwl/cli": "13.2.4",
     "@nrwl/cypress": "13.2.4",
     "@nrwl/eslint-plugin-nx": "13.2.4",
+    "@nrwl/express": "^13.2.4",
     "@nrwl/jest": "13.2.4",
     "@nrwl/linter": "13.2.4",
+    "@nrwl/node": "13.2.4",
     "@nrwl/react": "^13.2.4",
     "@nrwl/tao": "13.2.4",
     "@nrwl/web": "13.2.4",
     "@nrwl/workspace": "13.2.4",
     "@testing-library/react": "12.1.2",
     "@testing-library/react-hooks": "7.0.2",
+    "@types/express": "4.17.0",
     "@types/jest": "27.0.2",
     "@types/node": "14.14.33",
     "@types/react": "17.0.30",
