--- a/tooling/nx/playbook/00-workspace/tsconfig.base.json
+++ b/tooling/nx/playbook/00-workspace/tsconfig.base.json
@@ -15,6 +15,8 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@00-workspace/config": ["libs/config/src/index.ts"],
+      "@00-workspace/types": ["libs/types/src/index.ts"],
       "@00-workspace/ui": ["libs/ui/src/index.ts"]
     }
   },
