--- a/tooling/nx/personal/package.json
+++ b/tooling/nx/personal/package.json
@@ -3,25 +3,52 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
+    "nx": "nx",
     "start": "nx serve",
     "build": "nx build",
-    "test": "nx test"
+    "test": "nx test",
+    "lint": "nx workspace-lint && nx lint",
+    "e2e": "nx e2e",
+    "affected:apps": "nx affected:apps",
+    "affected:libs": "nx affected:libs",
+    "affected:build": "nx affected:build",
+    "affected:e2e": "nx affected:e2e",
+    "affected:test": "nx affected:test",
+    "affected:lint": "nx affected:lint",
+    "affected:dep-graph": "nx affected:dep-graph",
+    "affected": "nx affected",
+    "format": "nx format:write",
+    "format:write": "nx format:write",
+    "format:check": "nx format:check",
+    "update": "nx migrate latest",
+    "workspace-generator": "nx workspace-generator",
+    "dep-graph": "nx dep-graph",
+    "help": "nx help"
   },
   "private": true,
   "dependencies": {
     "@nrwl/next": "13.2.4",
-    "@tailwindcss/typography": "^0.5.0",
-    "autoprefixer": "^10.4.0",
+    "@tailwindcss/typography": "^0.4.1",
+    "add": "^2.0.6",
+    "autoprefixer": "^10.2.6",
     "core-js": "^3.6.5",
+    "document-register-element": "1.13.1",
+    "gray-matter": "^4.0.3",
     "next": "12.0.0",
-    "postcss": "^8.4.4",
+    "next-mdx-remote": "^3.0.2",
+    "postcss": "^8.3.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "regenerator-runtime": "0.13.7",
-    "tailwindcss": "^2.2.19",
-    "tslib": "^2.0.0"
+    "tailwindcss": "^2.1.4",
+    "tslib": "^2.0.0",
+    "babel-plugin-inline-react-svg": "^2.0.1"
   },
   "devDependencies": {
+    "@babel/core": "7.12.13",
+    "@babel/preset-env": "7.12.13",
+    "@babel/preset-react": "7.12.13",
+    "@babel/preset-typescript": "7.12.13",
     "@nrwl/cli": "13.2.4",
     "@nrwl/cypress": "13.2.4",
     "@nrwl/eslint-plugin-nx": "13.2.4",
@@ -31,16 +58,17 @@
     "@nrwl/tao": "13.2.4",
     "@nrwl/web": "13.2.4",
     "@nrwl/workspace": "13.2.4",
+    "@nrwl/devkit": "13.2.4",
     "@testing-library/react": "12.1.2",
-    "@testing-library/react-hooks": "7.0.2",
     "@types/jest": "27.0.2",
     "@types/node": "14.14.33",
     "@types/react": "17.0.30",
     "@types/react-dom": "17.0.9",
-    "@typescript-eslint/eslint-plugin": "~4.33.0",
-    "@typescript-eslint/parser": "~4.33.0",
+    "@typescript-eslint/eslint-plugin": "4.33.0",
+    "@typescript-eslint/parser": "4.33.0",
     "babel-jest": "27.2.3",
-    "cypress": "^8.3.0",
+    "cypress": "^7.3.0",
+    "dotenv": "10.0.0",
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.0",
     "eslint-config-prettier": "8.1.0",
@@ -50,9 +78,17 @@
     "eslint-plugin-react": "7.26.1",
     "eslint-plugin-react-hooks": "4.2.0",
     "jest": "27.2.3",
-    "prettier": "^2.3.1",
-    "react-test-renderer": "17.0.2",
+    "prettier": "2.3.2",
     "ts-jest": "27.0.5",
-    "typescript": "~4.4.3"
+    "ts-node": "~9.1.1",
+    "typescript": "4.3.5",
+    "url-loader": "^3.0.0",
+    "babel-loader": "8.1.0",
+    "@svgr/webpack": "^5.5.0",
+    "@storybook/react": "~6.3.0",
+    "@storybook/addon-essentials": "~6.3.0",
+    "@storybook/builder-webpack5": "~6.3.0",
+    "@storybook/manager-webpack5": "~6.3.0",
+    "@nrwl/storybook": "13.2.4"
   }
 }
