(feat):add component hydration in mdx

--- a/tooling/nx/personal/tsconfig.base.json
+++ b/tooling/nx/personal/tsconfig.base.json
@@ -15,7 +15,8 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@personal/markdown": ["libs/markdown/src/index.ts"]
+      "@personal/markdown": ["libs/markdown/src/index.ts"],
+      "@personal/shared/mdx-elements": ["libs/shared/mdx-elements/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
